# ndkWrokspace

app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/base/: base.cpp  base.h  jvm.cpp  jvm.h
app/src/main/cpp/util/: dynamic.cpp
app/src/main/java/com/app/myapplication/: DynamicJNI.java  MainActivity.java  Person.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
